<resources>
    <string name="app_name" translatable="false">Akelni+</string>
    <string name="logo">logo</string>
    <string name="background_vector">background vector</string>
    <string name="your_go_to_easy_meal_planning_mate">Your Go-To easy meal planning mate!</string>
    <string name="plan_your_meals_discover_healthy_recipes_amp_more"><![CDATA[Plan your meals, discover healthy recipes & more.]]></string>
    <string name="login">Login</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="dont_have_account_register">Don\'t have an account? Register</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="background_image_desc">App background image</string>
    <string name="app_logo_desc">App logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or_login_with">Or login with</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="good_morning_user">Good Morning, User!</string>
    <string name="get_your_meal_for_today">Get your meal for today</string>
    <string name="meal_name">Meal Name</string>
    <string name="popular_meals">Popular Breakfast Meals</string>
    <string name="view_by_category">View by Category</string>
    <string name="view_by_area">View by Area</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="magic_meal_roulette">Magic Meal Roulette</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="planned">Planned</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="_1_mix_the_ingredients_n2_bake_at_350_f">1. Mix the ingredients…\n2. Bake at 350°F...</string>
    <string name="watch_the_recipe">Watch the Recipe</string>
    <string name="add_to_my_meal_plan">Add to my meal plan</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="grams">grams</string>
    <string name="go_to_planned_meals">Go to Planned Meals</string>
    <string name="go_to_favorite_meals">Go to Favorite Meals</string>
    <string name="no_internet_connection_please_check_your_connection_to_access_the_home_screen_you_can_still_view_your_favourite_and_planned_meals">No internet connection. Please check your connection to access the Home screen. You can still view your Favourite and Planned meals.</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="warning">Warning</string>
    <string name="retry">Retry</string>
    <string name="view_by_ingredients">View by Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="home">Home</string>
    <string name="meal_thumbnail">Meal thumbnail</string>
    <string name="remove">Remove</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="john_doe">John Doe</string>
    <string name="logout">Logout</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="sya7">3aaaaaaaaaaaaaaaaaa</string>
</resources>