<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.view.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/profile_icon"
            android:scaleType="centerInside"
            android:src="@drawable/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/secondary" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:gravity="center"
            android:text="@string/john_doe"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_icon" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_65sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/logout"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/montserrat_medium"
            android:backgroundTint="@color/btn"
            app:strokeColor="@color/secondary"
            app:strokeWidth="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_46sdp"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/btn"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/forgot_password_"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/secondary"
            app:strokeWidth="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>