<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/onboaring_vector"
        android:translationY="-60dp" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_135sdp"
        android:layout_height="@dimen/_81sdp"
        android:layout_marginStart="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_34sdp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_51sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:textColorHint="#CECECE"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#CECECE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        app:startIconTint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_51sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:textColorHint="#CECECE"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#CECECE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_51sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:textColorHint="#CECECE"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#CECECE"
        app:hintTextColor="#CECECE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_51sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:textColorHint="#CECECE"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#CECECE"
        app:hintTextColor="#CECECE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/btn"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/register"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputLayout" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/or_continue_with"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Facebook Button -->
    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#405996"
        android:drawableLeft="@drawable/facebook_logo"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_10sdp"
        app:iconPadding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOr"
        app:strokeColor="@color/secondary"
        app:strokeWidth="@dimen/_1sdp" />

    <!-- Google Button -->
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#5184ec"
        android:drawableLeft="@drawable/google_logo"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/continue_with_google"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_10sdp"
        app:iconPadding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
        app:strokeColor="@color/secondary"
        app:strokeWidth="@dimen/_1sdp" />

    <!-- Login Link -->
    <TextView
        android:clickable="true"
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/already_have_account_login"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>