<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_6sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    app:cardElevation="@dimen/_4sdp"
    app:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border"
        android:padding="@dimen/_6sdp">

        <ImageView
            android:id="@+id/iv_meal_thumbnail"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:contentDescription="@string/meal_thumbnail"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tv_meal_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/meal_name"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/iv_meal_thumbnail"
            app:layout_constraintEnd_toStartOf="@id/btn_remove_planned"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/iv_meal_thumbnail"
            app:layout_constraintTop_toTopOf="@id/iv_meal_thumbnail"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/plannedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/iv_meal_thumbnail"
            app:layout_constraintEnd_toStartOf="@id/btn_remove_planned"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/iv_meal_thumbnail"
            app:layout_constraintTop_toTopOf="@id/iv_meal_thumbnail"
            app:layout_constraintVertical_bias="0.847" />

        <Button
            android:id="@+id/btn_remove_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn"
            android:text="@string/remove"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintBottom_toBottomOf="@id/iv_meal_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_meal_thumbnail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>