<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.view.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_1sdp">

        <!-- Search Bar -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_6sdp"
            android:background="@drawable/rounded_corner"
            android:queryHint="Search" />

        <!-- LinearLayout for ChipGroup -->
        <LinearLayout
            android:id="@+id/llchg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            android:layout_marginTop="@dimen/_12sdp">

            <!-- Chip Group for Search Methods -->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:chipSpacingHorizontal="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_6sdp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategory"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipIngredient"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredient" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCountry"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <!-- RecyclerView for Displaying Items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchItemsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/llchg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>